--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="auto" lang="de">
 <head>
     <meta charset="UTF-8"/>
-    <title>Lanis-Mobile</title>
+    <title>Lanis Mobile</title>
 
     <meta content="Lanis-Mobile - Die Schulportal Hessen App. Bring deine Schule auf das nächste Level!" name="description"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
