Anpassung des Wordings

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="auto" lang="de">
 <head>
     <meta charset="UTF-8"/>
-    <title>Lanis Mobile</title>
+    <title>Lanis-Mobile</title>
 
     <meta content="Lanis-Mobile - Die Schulportal Hessen App. Bring deine Schule auf das nächste Level!" name="description"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -23,7 +23,8 @@
                                             src="content/image/b3o1shvbuyeezgcpd7vp.png"></div>
         <div class="app__infos">
             <h1 class="app__name">Lanis-Mobile</h1>
-            <p class="app__description">Bring das Schulportal Hessen auf das nächste level</p>
+            <p class="app__description">Deine App für das hessische Schulportal! </p>
+            <p> In Zusammenarbeit mit dem staatlichen Schulamt für den Landkreis Groß-Gerau und den Main-Taunus-Kreis</p> 
             <div class="app__buttons app__buttons--desktop">
                 <a class="app__button-play" href="https://play.google.com/store/apps/details?id=io.github.alessioc42.sph" target="_blank"
                    title="Get on Google Play">
@@ -90,7 +91,7 @@
     <section class="app__fulldescription app__section container">
         <h2 class="app__section-title">Beschreibung</h2>
         <div class="app__fulldescription-content">
-            <p><em>Diese App steht in keiner Verbindung zum Schulportal Hessen</em></p>
+            <p><em>Diese App ist ein Pilotversuch im Schulamtsbezirk für den Landkreis Groß-Gerau und den Main-Taunus-Kreis</em></p>
             <p>Diese App ermöglicht einen einfachen Zugriff auf Lanis/das Schulportal Hessen. Die Funktionen
                 umfassen</p>
             <ul>
@@ -98,9 +99,11 @@
                 <li>Push-Benachrichtigungen zum Vertretungsplan</li>
                 <li>Erweiterte Filterfunktionen des Vertretungsplans</li>
                 <li>Zugang zum Schulkalender</li>
-				<li>Unterstützung für &quot;Mein Unterricht"</li>
+				<li>Unterstützung für &quot;Mein Unterricht" (Oberfläche der Lehrpersonen in Arbeit)</li>
 				<li>Unterstützung für Nachrichten</li>
+                <li>Stundenplan Ansicht (Oberfläche der Lehrpersonen in Arbeit)</li>
                 <li>Direkter 1-Klick-Login zur Lanis-Website</li>
+                <li>Dateispeicher (Abruf von Dateien)</li>
             </ul>
 
         </div>
@@ -108,8 +111,10 @@
 	<section class="app__fulldescription app__section container">
 		<h2 class="app__section-title">Made with ♥ by</h2>
 		<div class="app__fulldescription-content">
-			<p><em><b>Lanis-Mobile</b> wird von einer Gruppe hessischer Schüler entwickelt.</em></p>
-			<div id="contributors-list">
+			<p><em><b>Lanis-Mobile</b> wird von einer Gruppe hessischer Schüler in Zusammenarbeit mit dem Schulamt Rüsselsheim entwickelt.</em></p>
+            <p>Fragen und Rückmeldungen? Kommen Sie auf uns zu: <br>
+            Henning Kauler: <a href="mailto:henning.kauler@kultus.hessen.de">henning.kauler@kultus.hessen.de</a></p>
+            <div id="contributors-list">
 
 			</div>
 		</div>
