add discord server info

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
 			</div>
 		</div>
 	</section>
+	<section class="app__fulldescription app__section container">
+		<center>
+			<iframe src="https://discord.com/widget?id=1289897260724916298&theme=light" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+		</center>
+	</section>
 </main>
 <footer class="footer">
     <div class="container">
