--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="app__fulldescription-content">
             <p><em>Diese App ist ein Pilotversuch im Schulamtsbezirk für den Landkreis Groß-Gerau und den Main-Taunus-Kreis</em></p>
             <p>Diese App ermöglicht einen einfachen Zugriff auf Lanis/das Schulportal Hessen. Die Funktionen
-                umfassen</p>
+                umfassen:</p>
             <ul>
                 <li>Anzeige des Vertretungsplans</li>
                 <li>Push-Benachrichtigungen zum Vertretungsplan</li>
