--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<div class="app__fulldescription-content">
 			<p><em><b>Lanis-Mobile</b> wird von einer Gruppe hessischer Schüler in Zusammenarbeit mit dem Schulamt Rüsselsheim entwickelt.</em></p>
             <p>Fragen und Rückmeldungen? Kommen Sie auf uns zu: <br>
-            Henning Kauler: <a href="mailto:henning.kauler@kultus.hessen.de">henning.kauler@kultus.hessen.de</a></p>
+            Henning Kauler: <a href="mailto:medienbildung.ssa.ruesselsheim@kultus.hessen.de">henning.kauler@kultus.hessen.de</a></p>
             <div id="contributors-list">
 
 			</div>
