--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </p>
             <ul class="footer__links">
                 <li class="footer__link">
-                    <a href="https://github.com/alessioC42/lanis-mobile/blob/main/SECURITY.md">Privacy</a>
+                    <a href="https://lanis-mobile.github.io/privacy/">Privacy</a>
                 </li>
                 <li class="footer__link">
                     <a href="https://github.com/alessioC42/lanis-mobile" targe="_blank">GitHub</a>
