--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
 		</div>
 	</section>
 	<section class="container app__section discord-container">
-        <img src="assets/discord.svg" alt="Discord" width="200">
+        <div class="discord_fuck_you">
+
+        </div>
         <span><a href="https://discord.gg/MGYaSetUsY">Join our Discord</a> server to get in touch with developers and other users!</span>
 	</section>
 </main>
