Added simple dark mode to privacy policy Also added Font and UTF-8 codec (for ü, ä, ö)

--- a/policy/index.html
+++ b/policy/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html dir="auto" lang="de">
+<head>
+    <meta charset="UTF-8"/>
+    <title>Privacy Policy</title>
+
+    <meta content="Die Privacy Policy von Lanis-Mobile" name="description"/>
+    <link href="../assets/favicon.png" rel="icon"/>
+
+    <link href="../assets/simple-style.css" rel="stylesheet"/>
+</head>
+
 <h1 id="datenschutzerkl-rung-f-r-lanis-mobile">Datenschutzerklärung für Lanis-Mobile</h1>
 <p>io.github.alessioc42.sph</p>
 <h2 id="verantwortlicher">Verantwortlicher</h2>
@@ -40,3 +52,5 @@
     </ul>
     Es verbleiben keine personenbezogenen Daten der Anwendung auf Ihrem Gerät. Die auf den Servern des Schulportals Hessen gespeicherten Daten bleiben hiervon unberührt. Bitte beachten Sie hierzu die Datenschutzerklärung des Schulportals Hessen.
 </p>
+
+</html>
