Removed extra folder

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </p>
             <ul class="footer__links">
                 <li class="footer__link">
-                    <a href="https://lanis-mobile.github.io/privacy/">Privacy</a>
+                    <a href="https://lanis-mobile.github.io/policy/">Privacy Policy</a>
                 </li>
                 <li class="footer__link">
                     <a href="https://github.com/alessioC42/lanis-mobile" targe="_blank">GitHub</a>
