--- a/policy/index.html
+++ b/policy/index.html
@@ -2,7 +2,7 @@
 <html dir="auto" lang="de">
 <head>
     <meta charset="UTF-8"/>
-    <title>Privacy Policy</title>
+    <title>Datenschutzerklärung für Lanis-Mobile</title>
 
     <meta content="Die Privacy Policy von Lanis-Mobile" name="description"/>
     <link href="../assets/favicon.png" rel="icon"/>
@@ -20,14 +20,16 @@
     <p>Diese Anwendung steht in keiner Verbindung zu den Entwicklern des Schulportals Hessen. Diese Anwendung nutzt lediglich die von den Entwicklern des Schulportals Hessen bereitgestellten Zugriffsmöglichkeiten auf die Daten, vergleichbar mit der Nutzung eines Webbrowsers. Daher gilt die Datenschutzerklärung des Schulportals Hessen, diese ist unter dem folgendem Link zu finden:</p>
     <p><a href="https://info.schulportal.hessen.de/datenschutzerklaerung/">https://info.schulportal.hessen.de/datenschutzerklaerung/</a></p>
     <h2>Erhobene Daten</h2>
-    <p>Die Anwendung lanis-mobile erfasst folgende personenbezogene Daten:</p>
+    <p>Es werden keine Standortdaten erhoben.</p>
+    <p>Die Anwendung lanis-mobile erfasst folgende personenbezogene Daten systembedingt</p>
     <ul>
     <li>Schule (oder Schulnummer)</li>
     <li>Benutzername</li>
     <li>Passwort</li>
     </ul>
-    <p>Diese Daten sind für die Funktion der App notwendig, werden lokal gespeichert und zum Login an die Server des Schulportals Hessen übertragen. Zu keinem zeitpunkt werden diese an Dritte übertragen. Zu Analysezwecken und Verbesserung der Anwendung wird bei jedem Start der App eine Information, die die Schulnummer, den aktuellen Zeitpunkt und die Version der App enthält anonym an den Entwickler der App übermittelt und für 3 Monate gespeichert. Die Löschung erfolgt automatisch.</p>
-
+    <p>Diese Daten sind für die Funktion der App notwendig, werden lokal gespeichert und zum Login an die Server des Schulportals Hessen übertragen. Zu keinem zeitpunkt werden diese an Dritte übertragen.</p>
+    <h3>Diagnosedaten</h3>
+    <p>Zu Analysezwecken und Verbesserung der Anwendung wird bei jedem Start der App eine Information, die die Schulnummer, den aktuellen Zeitpunkt und die Version der App enthält anonym an den Entwickler der App übermittelt und für 3 Monate gespeichert. Die Löschung erfolgt automatisch.</p>
     <h3>Netzwerkzugang</h3>
     <p>Die Anwendung benötigt einen Netzzugang, um mit den Servern des Schulportals Hessen kommunizieren zu können.</p>
     <h3>Benachrichtigungen</h3>
