--- a/policy/index.html
+++ b/policy/index.html
@@ -50,7 +50,7 @@
         </ul>
         Als Service werden vorrübergehend die folgenden Daten auf dem Endgerät für die Dauer von 7 Tagen geschützt zwischengespeichert:
         <ul>
-            <li>Stundeplan</li>
+            <li>Stundenplan</li>
             <li>Vertretungsplan</li>
         </ul>
         Es verbleiben keine personenbezogenen Daten der Anwendung auf Ihrem Gerät. Die auf den Servern des Schulportals Hessen gespeicherten Daten bleiben hiervon unberührt. Bitte beachten Sie hierzu die Datenschutzerklärung des Schulportals Hessen.
