--- a/policy/index.html
+++ b/policy/index.html
@@ -21,7 +21,7 @@
     <p><a href="https://info.schulportal.hessen.de/datenschutzerklaerung/">https://info.schulportal.hessen.de/datenschutzerklaerung/</a></p>
     <h2>Erhobene Daten</h2>
     <p>Es werden keine Standortdaten erhoben.</p>
-    <p>Die Anwendung lanis-mobile erfasst folgende personenbezogene Daten systembedingt</p>
+    <p>Die Anwendung lanis-mobile erfasst folgende personenbezogene Daten Systembedingt:</p>
     <ul>
     <li>Schule (oder Schulnummer)</li>
     <li>Benutzername</li>
