Update wording on main page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section class="app__fulldescription app__section container">
         <h2 class="app__section-title">Beschreibung</h2>
         <div class="app__fulldescription-content">
-            <p><em>Diese App ist ein Pilotversuch im Schulamtsbezirk für den Landkreis Groß-Gerau und den Main-Taunus-Kreis</em></p>
+            <p><em>Das staatliche Schulamt für den Landkreis Groß-Gerau und den Main-Taunus-Kreis begleitet die inhaltliche und organisatorische Weiterentwicklung der App sowie die Prüfung des Funktionsumfangs zu Testzwecken.</em></p>
             <p>Diese App ermöglicht einen einfachen Zugriff auf Lanis/das Schulportal Hessen. Die Funktionen
                 umfassen:</p>
             <ul>
